--- a/css/mglobel-simple.webflow.css
+++ b/css/mglobel-simple.webflow.css
@@ -73,8 +73,10 @@ p {
 .header {
   height: 520px;
   background-image: url('../images/IMG_20180619_204813.jpg');
-  background-size: contain;
-  background-attachment: fixed;
+  background-position: 50% 55%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
   box-shadow: inset 0 3px 0 0 #000;
 }
 
@@ -374,6 +376,7 @@ p {
 @media (max-width: 991px) {
   .header {
     background-image: url('../images/IMG_20180619_204812.jpg');
+    background-size: cover;
   }
   .navigation {
     box-shadow: 0 0 0 1px rgba(0, 0, 0, .05);
